[package]
name = "perlin-wave"
version = "0.1.26"
authors = ["Hiroki Minagawa <minagawa@tokyo800.jp>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "^0.1"
console_log = "^0.2"
js-sys = "0.3.47"
lerp = "0.4.0"
noise = "0.7.0"
serde = { version = "1.0.123", features = ["derive"] }
wasm-bindgen = { version = "0.2.70", features = ["serde-serialize"] }

[dependencies.rand]
version = "0.7.3"
features = ["wasm-bindgen"]

[dependencies.web-sys]
version = "0.3.47"
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'Node',
  'Window',
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
